# TileCCL

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  README_old.md  XTile_Claude_Code提示词计划.md  pyproject.toml  run_benchmarks.sh  其他类似Tile通信的流程.md
docs/: Benchmark噪声影响分析报告.md  GEMM_AllScatter_四系统全栈对比.md  GEMM_AllScatter_四系统全栈对比_修订版.md  TNCC WG工作组模式完整代码流程报告.md  TNCC开源前准备计划.md  TNCC现状流程_修订版.md  TNCC相关术语解释.md  TNCC矩阵乘计算路径分析报告.md  TNCC远端访存底层机制报告.md  XTile WG工作组模式完整代码流程报告.md  XTile_开发计划.md  XTile现状流程.md  XTile现状流程_修订版.md  XTile相关术语解释.md  XTile矩阵乘计算路径分析报告.md  XTile远端访存底层机制报告.md  benchmark_experiment_notes.md  experiment_log.md  fig6_collective_analysis.md  tile_comm_scope.md  四项目全栈差异分析_20260320.md
examples/: benchmark_patterns.py  multiprocess.py  single_process.py
scripts/: _benchmark_reporting.py  analyze_benchmark_noise.py  audit_iris.py  diagnose_ipc.py  export_benchmark_summary.py  fix_ipc.py  investigate_comm_interference.py  plot_figures.py  publish_fig6_artifacts.py
tests/: CLAUDE.md  conftest.py  test_ag_gemm_rs_multiprocess.py  test_allgather_multiprocess.py  test_allreduce_multiprocess.py  test_backend_ipc.py  test_benchmark_collective_schema.py  test_benchmark_reporting.py  test_benchmark_results.py  test_broadcast_multiprocess.py  test_cli_smoke.py  test_cli_support.py  test_collectives_host.py  test_context.py  test_context_smoke.py  test_export_benchmark_summary.py  test_feature_gates.py  test_gemm_allgather_multiprocess.py  test_gemm_allscatter_auto_patterns_multiprocess.py  test_gemm_allscatter_multiprocess.py  test_gemm_allscatter_smoke.py  test_gemm_reducescatter_multiprocess.py  test_import_smoke.py  test_ops.py  test_plot_figures_compat.py  test_publish_fig6_artifacts.py  test_reduce_scatter_multiprocess.py  test_scatter_multiprocess.py  test_support.py  test_validate_fig6_gates.py
(+170 files in other folders)
