[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tileccl"
version = "0.1.0"
description = "Tile-native collective communication for multi-GPU systems, built entirely in Triton"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "TileCCL Contributors"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
]

[project.optional-dependencies]
nvidia = [
    "nvidia-ml-py>=12.0",
]
amd = [
    # AMD-specific dependencies (ROCm runtime detected at install time)
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]
benchmark = [
    "matplotlib>=3.8",
    "pandas>=2.2",
    "tabulate>=0.9",
]

[project.scripts]
tileccl = "tileccl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tileccl*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/plot_figures.py" = ["E402"]
"tileccl/patterns/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[project.urls]
Repository = "https://github.com/MaKai-Research/tileccl"
